Fixed footer PCI logo alignment. Fixed student padding-bottom.  Fixed header width on mobile view.  Fixed min width for page.

--- a/src/sass/partials/pages/front/_layout.scss
+++ b/src/sass/partials/pages/front/_layout.scss
@@ -5,6 +5,9 @@
   background-color: rgb(124,140,137);  // Background Color
 
 }
+.page {
+  min-width: 370px;
+}
 
 @media only screen and (max-width: 1048px){
   .panel-display{
