--- a/src/sass/partials/regions/header/_layout.scss
+++ b/src/sass/partials/regions/header/_layout.scss
@@ -12,7 +12,7 @@
 
 @media only screen and (max-width: 800px){
   .site-name {
-    height: 142px;
+    height: 0px;
     width: 100%;
     max-width: none;
     background-image: url("../images/texture-background.jpg");
